--- a/lesson3/task1.html
+++ b/lesson3/task1.html
@@ -7,7 +7,18 @@
 <body>
 		<script type="text/javascript">
 			'use strict';
-		
+			for (let i = 0; i < 11; i++) {
+				console.log(checkNumber(i));
+			}
+			function checkNumber(number) {
+				if (number == 0) {
+					return '0 - это ноль';
+				}
+				else if (number % 2 == 0) {
+					return `${number} - четное число`;
+				}
+				return `${number} - нечетное число`;
+			}
 		</script>
 </body>
 </html>
